Add java settings and purge unzip